--- a/public/css/output.css
+++ b/public/css/output.css
@@ -752,6 +752,10 @@ select {
   z-index: 0;
 }
 
+.z-30 {
+  z-index: 30;
+}
+
 .col-span-3 {
   grid-column: span 3 / span 3;
 }
@@ -1013,12 +1017,12 @@ select {
   margin-right: 0.25rem;
 }
 
-.mr-auto {
-  margin-right: auto;
-}
-
 .mt-20 {
   margin-top: 5rem;
+}
+
+.mr-auto {
+  margin-right: auto;
 }
 
 .-mt-3 {
@@ -1271,10 +1275,6 @@ select {
   width: 18rem;
 }
 
-.w-comic {
-  width: 800px;
-}
-
 .w-1\/2 {
   width: 50%;
 }
@@ -1285,6 +1285,10 @@ select {
 
 .w-1\/5 {
   width: 20%;
+}
+
+.w-comic {
+  width: 800px;
 }
 
 .min-w-max {
@@ -1453,12 +1457,12 @@ select {
   grid-template-columns: repeat(3, minmax(0, 1fr));
 }
 
-.grid-cols-12 {
-  grid-template-columns: repeat(12, minmax(0, 1fr));
-}
-
 .grid-cols-1 {
   grid-template-columns: repeat(1, minmax(0, 1fr));
+}
+
+.grid-cols-12 {
+  grid-template-columns: repeat(12, minmax(0, 1fr));
 }
 
 .grid-rows-4 {
@@ -4138,12 +4142,12 @@ svg #main-circ {
     width: 20%;
   }
 
-  .md\:w-full {
-    width: 100%;
-  }
-
   .md\:w-1\/2 {
     width: 50%;
+  }
+
+  .md\:w-full {
+    width: 100%;
   }
 
   .md\:w-1\/4 {
